Fixed scrollbar color

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html.LightMode {
 	--border: #222;
 	--text-color: #203059;
 	--section-text-color: #e3e5ea;
+	--scrollbar-color: var(--header);
 }
 
 html.NightMode {
@@ -16,6 +17,7 @@ html.NightMode {
 	--border: #545c65;
 	--text-color: #f2f2f2;
 	--section-text-color: var(--text-color);
+	--scrollbar-color: var(--text-color);
 }
 
 @media (prefers-color-scheme: light) {
@@ -25,6 +27,7 @@ html.NightMode {
 		--border: #222;
 		--text-color: #203059;
 		--section-text-color: #e3e5ea;
+		--scrollbar-color: var(--header);
 	}
 }
 
@@ -35,6 +38,7 @@ html.NightMode {
 		--border: #545c65;
 		--text-color: #f2f2f2;
 		--section-text-color: var(--text-color);
+		--scrollbar-color: var(--text-color);
 	}
 }
 
@@ -44,7 +48,7 @@ html.NightMode {
 }
 ::-webkit-scrollbar-thumb {
 	border-radius: 5px;
-	background-color: var(--header) ;
+	background-color: var(--scrollbar-color) ;
 }
 
 *,
